Ensure that CompactionCandidate.currentStatus is non-null