@@ -259,7 +259,7 @@ public class CompactionStatus
    * segments but only the first incomplete status is returned.
    */
   static CompactionStatus compute(
-      CompactionCandidate candidateSegments,
+      List<DataSegment> candidateSegments,
       DataSourceCompactionConfig config,
       @Nullable IndexingStateFingerprintMapper fingerprintMapper
   )
@@ -348,7 +348,8 @@ public class CompactionStatus
   private static class Evaluator
   {
     private final DataSourceCompactionConfig compactionConfig;
-    private final CompactionCandidate candidateSegments;
+    private final List<DataSegment> candidateSegments;
+    private final long totalSegmentBytes;
     private final ClientCompactionTaskQueryTuningConfig tuningConfig;
     private final UserCompactionTaskGranularityConfig configuredGranularitySpec;
 
@@ -362,13 +363,14 @@ public class CompactionStatus
     private final IndexingStateFingerprintMapper fingerprintMapper;
 
     private Evaluator(
-        CompactionCandidate candidateSegments,
+        List<DataSegment> candidateSegments,
         DataSourceCompactionConfig compactionConfig,
         @Nullable String targetFingerprint,
         @Nullable IndexingStateFingerprintMapper fingerprintMapper
     )
     {
       this.candidateSegments = candidateSegments;
+      this.totalSegmentBytes = candidateSegments.stream().mapToLong(DataSegment::getSize).sum();
       this.compactionConfig = compactionConfig;
       this.tuningConfig = ClientCompactionTaskQueryTuningConfig.from(compactionConfig);
       this.configuredGranularitySpec = compactionConfig.getGranularitySpec();
@@ -408,7 +410,7 @@ public class CompactionStatus
                   .map(f -> f.apply(this))
                   .filter(status -> !status.isComplete())
                   .map(CompactionStatus::getReason)
-                  .collect(Collectors.toList())
+                  .toList()
         );
 
         // Any segments left in unknownStateToSegments passed all checks and are considered compacted
@@ -417,7 +419,7 @@ public class CompactionStatus
                 .values()
                 .stream()
                 .flatMap(List::stream)
-                .collect(Collectors.toList())
+                .toList()
         );
       }
 
@@ -467,7 +469,7 @@ public class CompactionStatus
             mismatchedFingerprintToSegmentMap.values()
                                             .stream()
                                             .flatMap(List::stream)
-                                            .collect(Collectors.toList())
+                                            .toList()
         );
         return CompactionStatus.pending("Segments have a mismatched fingerprint and no fingerprint mapper is available");
       }
@@ -508,7 +510,7 @@ public class CompactionStatus
      */
     private CompactionStatus segmentsHaveBeenCompactedAtLeastOnce()
     {
-      for (DataSegment segment : candidateSegments.getSegments()) {
+      for (DataSegment segment : candidateSegments) {
         final String fingerprint = segment.getIndexingStateFingerprint();
         final CompactionState segmentState = segment.getLastCompactionState();
         if (fingerprint != null) {
@@ -613,10 +615,10 @@ public class CompactionStatus
     private CompactionStatus inputBytesAreWithinLimit()
     {
       final long inputSegmentSize = compactionConfig.getInputSegmentSizeBytes();
-      if (candidateSegments.getTotalBytes() > inputSegmentSize) {
+      if (totalSegmentBytes > inputSegmentSize) {
         return CompactionStatus.skipped(
             "'inputSegmentSize' exceeded: Total segment size[%d] is larger than allowed inputSegmentSize[%d]",
-            candidateSegments.getTotalBytes(), inputSegmentSize
+            totalSegmentBytes, inputSegmentSize
         );
       } else {
         return COMPLETE;
